# termiclaw

./: .gitignore  .pre-commit-config.yaml  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MEMORY.md  PLAN.md  README.md  README.md-e  SPEC.md  TERMINUS.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: DESIGN.md
memory/: feedback_pr_workflow.md  legal_boundaries.md  project_overview.md  user_preferences.md
scripts/: check-branch.sh  check-exhaustive-match.sh  check-log-reserved-names.sh  check-no-inline-imports.sh  check-no-monkeypatch.sh  check-no-object-in-signatures.sh  check-no-shlex-quote-in-argv.sh  e2e-smoke.sh  update-loc-badges.sh
termiclaw/: agent.py  agent_core.py  artifacts.py  atif.py  cli.py  commands.py  container.py  db.py  decide.py  errors.py  events.py  logging.py  mcts.py  models.py  planner.py  ports.py  result.py  runtime.py  shell.py  stall.py  state.py  summarize_worker.py  summarizer.py  tagging.py  task_file.py  tmux.py  trajectory.py  transitions.py  validate.py  verifier.py
tests/integration/: test_container_integration.py  test_tmux_integration.py
tests/unit/: conftest.py  test_agent.py  test_agent_core.py  test_agent_run.py  test_apply.py  test_artifacts.py  test_atif.py  test_cli.py  test_commands_events.py  test_container.py  test_db.py  test_decide.py  test_logging.py  test_mcts.py  test_mcts_persistence.py  test_models.py  test_planner.py  test_result.py  test_runtime.py  test_stall.py  test_state.py  test_summarize_worker.py  test_summarizer.py  test_tagging.py  test_task_file.py  test_tmux.py  test_trajectory.py  test_validate.py  test_verifier.py
tests/unit/fakes/: __init__.py  artifacts.py  container.py  persistence.py  planner.py  summarize.py  wire.py
